--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.jpa.hibernate.ddl.auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spring
 spring.datasource.username=root
 spring.datasource.password=12345
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
